hphp/hack/test/typecheck/lambda/sort_by.php.exp
File "sort_by.php", line 20, characters 70-76:
Invalid return type (Typing[4110])
File "sort_by.php", line 13, characters 23-25:
This is an int
File "sort_by.php", line 20, characters 70-76:
It is incompatible with a float because this is the result of an arithmetic operation with a float as the first argument.
File "sort_by.php", line 20, characters 5-11:
Here is why I think the argument is a float: this is a float because a type could not be determined here
File "sort_by.php", line 13, characters 18-19:
  via this generic Ts
